--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -3,20 +3,40 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="#000000"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
-        android:id="@+id/content_container"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/top_bar"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <ImageView
+            android:contentDescription="@string/app_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/app_name_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/content_container"
+        app:layout_constraintTop_toBottomOf="@+id/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"/>
 
     <Button
         android:id="@+id/pick_video"
         app:layout_constraintTop_toBottomOf="@+id/content_container"
         android:layout_marginTop="10dp"
-        android:text="Pick Video"
+        android:translationZ="2dp"
+        android:text="@string/pick_video"
+        android:background="@color/teal_700"
         android:textSize="18sp"
         android:textColor="#000000"
         android:layout_width="match_parent"
