--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <!-- 背景色系 -->
-    <color name="primary_bg">#FFFFFF</color>
-    <color name="primary_accent_bg">#F7F8FC</color>
-    <color name="primary_light_bg">#F0EDE5</color>
+    <!-- 背景色系 -->=
+    <color name="primary_bg">#0C0B0E</color>
+    <color name="primary_accent_bg">#BF24252B</color>
+    <color name="primary_light_bg">#0C0B0E</color>
 </resources>
