--- a/app/src/main/res/values-v31/styles.xml
+++ b/app/src/main/res/values-v31/styles.xml
@@ -4,7 +4,7 @@
     <style name="SplashTheme" parent="ThemeSplashScreen">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <!--启动画面背景颜色-->
@@ -12,8 +12,7 @@
         <!-- 图标背景的应用图标尺寸应为 288×288 dp（同时位于直径 192 dp 的圆圈内）-->
         <!-- 带有图标背景的应用图标尺寸应为 240×240 dp（同时位于直径 160 dp 的圆圈内）-->
         <item name="windowSplashScreenAnimatedIcon">@drawable/logo_intro</item>
-        <item name="android:fitsSystemWindows">true</item>
-        <item name="android:windowBackground">@color/primary_light_bg</item>
+        <item name="android:windowBackground">@color/white</item>
         <item name="android:windowSplashScreenAnimationDuration">0</item>
         <!-- 品牌图片尺寸应为 200×80 dp-->
         <item name="android:windowSplashScreenBrandingImage">@drawable/app_name_intro</item>
