完成webdav文件到原生播放的原过程，添加文件大小和日期展示,添加播放器速度，前进和后退功能

--- a/gl_player/src/main/res/layout/player_fragment_layout.xml
+++ b/gl_player/src/main/res/layout/player_fragment_layout.xml
@@ -52,6 +52,35 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/buffering_box"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/overlay_view"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ProgressBar
+            android:id="@+id/buffering_bar"
+            android:indeterminateBehavior="repeat"
+            android:indeterminateDrawable="@anim/working_rotate"
+            android:indeterminateDuration="1000"
+            android:indeterminateOnly="true"
+            android:interpolator="@android:anim/linear_interpolator"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/brightness_box"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,6 +139,37 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp">
+        <ImageView
+            android:id="@+id/backward_30"
+            app:layout_constraintEnd_toStartOf="@+id/forward_30"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/outline_replay_30_24"
+            android:layout_width="28dp"
+            android:layout_height="28dp"/>
+
+        <ImageView
+            android:id="@+id/forward_30"
+            app:layout_constraintEnd_toStartOf="@+id/speed_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/outline_forward_30_24"
+            android:layout_width="28dp"
+            android:layout_height="28dp"/>
+        <ImageView
+            android:id="@+id/speed_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/outline_speed_24"
+            android:layout_width="28dp"
+            android:layout_height="28dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/toolbar_box"
