--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,5 +44,8 @@
         <item name="android:listPreferredItemHeightSmall">56dp</item>
     </style>
 
+    <style name="SlideTopBottomTheme" parent="AppTheme">
+        <item name="android:windowAnimationStyle">@style/SlideTopBottom</item>
+    </style>
 
 </resources>
