--- a/app/src/main/res/layout/conn_info_item_layout.xml
+++ b/app/src/main/res/layout/conn_info_item_layout.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -23,8 +25,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:paddingTop="9dp"
+        android:paddingBottom="11dp"
         android:textSize="14sp"
         android:textColor="@color/text_primary"
         android:layout_width="0dp"
