--- a/app/src/main/res/layout/select_conn_type_layout.xml
+++ b/app/src/main/res/layout/select_conn_type_layout.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -14,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/app_icon"
+            android:id="@+id/back_btn"
             android:contentDescription="@string/image_holder"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +24,7 @@
 
         <TextView
             android:id="@+id/title"
-            app:layout_constraintStart_toEndOf="@+id/app_icon"
+            app:layout_constraintStart_toEndOf="@+id/back_btn"
             app:layout_constraintEnd_toStartOf="@+id/close_btn"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +32,7 @@
             android:layout_marginEnd="15dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
-            android:text="@string/add_connection"
+            android:text="@string/edit_connection"
             android:textAlignment="center"
             android:fontFamily="sans-serif-condensed-medium"
             android:textSize="18sp"
