--- a/app/src/main/res/layout/grid_file_item_layout.xml
+++ b/app/src/main/res/layout/grid_file_item_layout.xml
@@ -26,9 +26,8 @@
         app:layout_constraintTop_toBottomOf="@+id/icon_iv"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textAlignment="center"
+        android:padding="5dp"
+        android:gravity="center_horizontal"
         android:textSize="16sp"
         android:textColor="@color/text_primary"
         android:layout_width="0dp"
