--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -13,8 +14,9 @@
         <ImageView
             android:id="@+id/app_icon"
             android:contentDescription="@string/image_holder"
-            android:src="@drawable/logo_intro"
+            android:src="@drawable/native_play_logo"
             android:scaleType="centerInside"
+            android:padding="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -101,8 +103,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/file_list"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintTop_toBottomOf="@+id/storage_alert_box"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
