--- a/app/src/main/res/layout/grid_file_item_layout.xml
+++ b/app/src/main/res/layout/grid_file_item_layout.xml
@@ -26,11 +26,13 @@
         app:layout_constraintTop_toBottomOf="@+id/icon_iv"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="10dp"
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintVertical_bias="0"
         android:padding="5dp"
-        android:gravity="center_horizontal"
+        android:gravity="center_horizontal|top"
         android:textSize="16sp"
         android:textColor="@color/text_primary"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
