--- a/app/src/main/res/layout/video_player_layout.xml
+++ b/app/src/main/res/layout/video_player_layout.xml
@@ -7,58 +7,33 @@
     android:background="#000000"
     android:fitsSystemWindows="true">
 
+    <FrameLayout
+        android:id="@+id/content_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-5dp"
+        android:background="@android:color/transparent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/app_icon"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="15dp"
+            android:id="@+id/back_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="8dp"
+            android:layout_marginStart="8dp"
             android:contentDescription="@string/image_holder"
-            android:scaleType="centerInside"
-            android:src="@drawable/logo_intro"
+            android:src="@drawable/ic_back_btn"
+            android:translationZ="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:text="@string/app_name"
-            android:textColor="@color/text_primary"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/add_conn"
-            app:layout_constraintStart_toEndOf="@+id/app_icon"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/add_conn"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginEnd="15dp"
-            android:contentDescription="@string/image_holder"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <FrameLayout
-        android:id="@+id/content_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/pick_video"
-        app:layout_constraintTop_toBottomOf="@+id/top_bar" />
 
     <TextView
         android:id="@+id/pick_video"
