--- a/gl_player/src/main/res/layout/player_fragment_layout.xml
+++ b/gl_player/src/main/res/layout/player_fragment_layout.xml
@@ -111,6 +111,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <ImageView
+            android:id="@+id/back_btn_hor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:layout_width="32dp"
+            android:layout_height="32dp"/>
+
+        <ImageView
             android:id="@+id/backward_30"
             app:layout_constraintEnd_toStartOf="@+id/forward_30"
             app:layout_constraintTop_toTopOf="parent"
@@ -141,23 +151,6 @@
             android:src="@drawable/outline_speed_24"
             android:layout_width="24dp"
             android:layout_height="24dp"/>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar_box"
-            android:visibility="gone"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/back_btn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="10dp"
-                android:src="@drawable/baseline_arrow_back_24"
-                android:layout_width="32dp"
-                android:layout_height="32dp"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
         <ProgressBar
             android:id="@+id/loading_view"
             android:layout_width="30dp"
